# Echoes-VK-Helper

./: .gitignore  COMMERCIAL.md  CONTRIBUTING.md  LICENSE  README.md  app.py  app.spec  pyproject.toml  requirements.in  requirements.lock.txt
.github/workflows/: ci.yml
.kilo/plans/: echoes-vulkan-helper.md
assets/vulkan/: dinput8.ini
core/: __init__.py  backup_manager.py  config_manager.py  elevation.py  game_detector.py  gpu_check.py  logger.py  paths.py  resolution.py  uninstaller.py  validator.py  vulkan_installer.py
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  GETTING-STARTED.md  TESTING.md
tests/: smoke_e2e.py  smoke_gui.py  test_backup_manager.py  test_uninstaller.py  test_update_vulkan.py
tools/: update_vulkan.py
wizard/: anim.py  controller.py  persistence.py
wizard/pages/: _common.py  completion_page.py  detection_page.py  install_page.py  summary_page.py  welcome_page.py
